--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     
     #title {
         font-size: 3rem;
-        text-shadow: 1px 2px red;    
+        text-shadow: 3px 3px white;    
     }
     
     #description {
