--- a/style.css
+++ b/style.css
@@ -239,6 +239,7 @@ span {
     background-color: inherit;
     padding-left: 15px;
     background-color: red;  
+    
 }
 
 .thanks_message{
@@ -251,7 +252,12 @@ span {
     
 .title {
     font-size: 3rem;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 20px; 
+}
+
+.thick {
+    border: 5px solid black;
+    border-radius: 50%;
 }
 
