--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
     * {
         box-sizing: border-box;
+
     }
+
     
     body {
         background-image: url('https://images.unsplash.com/photo-1578991624414-276ef23a534f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2085&q=80');
@@ -30,7 +32,6 @@
         display: block;
         margin: auto;
         max-width: 700px; 
-        opacity: 0.90;
     }
     
     
@@ -39,6 +40,64 @@
         border-radius: 5px;
         border: 1px solid white;
         font-size: 1rem;
+    }
+
+    
+    #checkbox + label:hover {
+        cursor: pointer;
+    }
+
+    #checkbox1 + label:hover {
+        cursor: pointer;
+    }
+
+    #checkbox2 + label:hover {
+        cursor: pointer;
+    }
+
+    #checkbox3 + label:hover {
+        cursor: pointer;
+    }
+
+    #checkbox4 + label:hover {
+        cursor: pointer;
+    }
+
+    #checkbox5 + label:hover {
+        cursor: pointer;
+    }
+    
+    #checkbox6 + label:hover {
+        cursor: pointer;
+    }
+    
+    #checkbox7 + label:hover {
+        cursor: pointer;
+    }
+    
+    #checkbox8 + label:hover {
+        cursor: pointer;
+    }
+
+    #checkbox9 + label:hover {
+        cursor: pointer;
+    }
+    
+    #radio + label:hover {
+        cursor: pointer;
+    }
+
+    #radio1 + label:hover {
+        cursor: pointer;
+    }
+
+    #radio2 + label:hover {
+        cursor: pointer;
+    }
+
+    #radio, #radio1, #radio2 {
+
+        cursor: pointer;
     }
     
     select {  
@@ -59,7 +118,7 @@
     }
     
     #survey-form {
-        background-color: red;
+        background-color:red;
         margin-top: 5px;
         padding-top: 20px;
         padding-left: 20px;
@@ -68,11 +127,10 @@
         margin-bottom: 50px; 
     }
     
-    #radio {
+    #radio, #radio1, #radio2 {
         text-align: left;
         height: 10px;
         width: 10px;  
-        cursor: pointer;
     }
 
   
@@ -88,16 +146,13 @@
         cursor: pointer;
     }
     
-    #checkbox {
+    #checkbox, #checkbox1, #checkbox2, #checkbox3, #checkbox4, #checkbox5, #checkbox6, #checkbox7, #checkbox8, #checkbox9  {
         height: 10px;
         cursor: pointer;
     }
 
    
-    #textarea {
-       width: 490px;
-       border-radius: 10px;
-    }
+    
     
     
     button {
@@ -154,6 +209,7 @@
         margin: auto;
         width: 100%;
         box-sizing: content-box;
+        border-radius: 10px;
       }
     
     
@@ -258,6 +314,15 @@ span {
 
 .thick {
     border: 5px solid black;
-    border-radius: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
+.textarea {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    resize: both;
+    min-height: 40px;
+    line-height: 20px;
+  }
