--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
         background-color:white;
         max-width: 100%;
         height: 100%;
+        text-align: center;
     }
     
     header {
@@ -109,8 +110,8 @@
 
     
     #title {
-        font-size: 3rem;
-        text-shadow: 3px 3px white;    
+        font-size: 4rem;
+        font-family: 'Kanit', sans-serif;
     }
     
     #description {
@@ -133,7 +134,6 @@
         width: 10px;  
     }
 
-  
     
     #name, #lname, #email, #role, #number, #submit {
         width: 630px;
@@ -146,14 +146,12 @@
         cursor: pointer;
     }
     
-    #checkbox, #checkbox1, #checkbox2, #checkbox3, #checkbox4, #checkbox5, #checkbox6, #checkbox7, #checkbox8, #checkbox9  {
+    #checkbox, #checkbox1, #checkbox2, #checkbox3, #checkbox4, #checkbox5, #checkbox6, #checkbox7, #checkbox8, #checkbox9 {
         height: 10px;
         cursor: pointer;
     }
 
    
-    
-    
     
     button {
         width: 630px;
@@ -167,7 +165,7 @@
         transition-duration: 0.5s;;
     }
     
-    button:hover{
+    button:hover {
         background-color: yellow;
         color: black;
         transition-duration: 0.5s;
@@ -191,16 +189,16 @@
     }
 
 
-    .form-control.success input{
+    .form-control.success input {
         border: 2px solid black;
         
     }
 
-    .form-control.error input{
+    .form-control.error input {
         border: 3px solid yellow;
     }
 
-    .form-control small{
+    .form-control small {
         visibility: hidden;
     }
 
@@ -224,8 +222,10 @@
         /* Overflow "auto" allows the box to start with no scrollbars but add them as content fills the box. */
         overflow: auto;
         /* Resize creates a tab in the lower right corner of textarea for most modern browsers and allows users to resize the box manually. Note: Resize isn't supported by most older agents and IE. */
-        resize: both;
-      }
+        resize: none;
+        border-radius: 5px;
+        border-style: none;
+    }
     
     
     
