--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
     }
     
     #survey-form {
-        background-color:red;
+        background-color:rgb(106, 4, 29);
         margin-top: 5px;
         padding-top: 20px;
         padding-left: 20px;
@@ -144,7 +144,14 @@
         width: 490px;
         border-radius: 10px;
         cursor: pointer;
+        outline: none;
+       
     }
+
+    #dropdown:focus {
+        border: 1.5px solid rgb(55, 0, 255);
+    }
+
     
     #checkbox, #checkbox1, #checkbox2, #checkbox3, #checkbox4, #checkbox5, #checkbox6, #checkbox7, #checkbox8, #checkbox9 {
         height: 10px;
@@ -158,7 +165,7 @@
         border-radius: 10px;
         padding: 10px;
         margin-bottom: 30px;
-        border: 1px solid red;
+        border: none;
         background-color: orange;
         color: white;
         cursor: pointer;
@@ -175,10 +182,17 @@
     }
 
     
+
+    
     input:focus {
         outline: none;
         background-color:white;
         border: 1.5px solid rgb(55, 0, 255);
+        transition: 0.5s ease-in-out;
+    }
+
+    input:focus::after{
+        transition: 0.5s ease-out;
     }
 
     
@@ -250,9 +264,30 @@
         
     
     }
+
+    @media (min-width: 600px){
+        
+        span {
+            font-size: 3rem;
+        }
+
+        
+        .logo_box {
+            margin-bottom: 50px;
+            border: 15px solid black;
+            height: 100px;
+            width: 200px;
+            line-height: 100px;
+            font-family: 'Kanit', sans-serif;
+            font-weight: bold;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+    }
     
     @media (min-width: 576px) {
-            .container {
+            
+        .container {
             max-width: 540px;
             }
         
@@ -268,12 +303,16 @@
             
 
 }
-    
+
+
      
       @media (min-width: 768px) {
+        
         .container {
           max-width: 720px;
         }
+
+        
       }
       
 
@@ -293,16 +332,17 @@
     border-radius: 10px;
     text-align: center;
     box-shadow: 1px 1px black;
+    font-family: 'Kanit', sans-serif;
 }
 
 
 .logo_box {
     margin-bottom: 50px;
     border: 15px solid black;
-    height: 140px;
-    width: 225px;
-    line-height: 110px;
-    font-family: arial;
+    height: 170px;
+    width: 240px;
+    line-height: 145px;
+    font-family: 'Kanit', sans-serif;
     font-weight: bold;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -336,4 +376,5 @@ span {
     padding-left: 10px;
     padding-right: 10px;
 }
+
 
