--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
     }
     
     #survey-form {
-        background-color:rgb(106, 4, 29);
+        background-color:red;
         margin-top: 5px;
         padding-top: 20px;
         padding-left: 20px;
