--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     .container {
         display: block;
         margin: auto;
-        max-width: 700px; 
+        max-width: 900px; 
     }
     
     
@@ -119,7 +119,7 @@
     }
     
     #survey-form {
-        background-color:red;
+        background-color: rgb(8, 127, 140);
         margin-top: 5px;
         padding-top: 20px;
         padding-left: 20px;
@@ -326,7 +326,7 @@
 
 
 .outter_box {
-    background-color: red;
+    background-color: rgb(8, 127, 140);;
     margin-top: 135px;
     padding: 30px;
     border-radius: 10px;
@@ -353,7 +353,7 @@ span {
     font-size: 5rem;
     background-color: inherit;
     padding-left: 15px;
-    background-color: red;  
+    background-color: rgb(8, 127, 140);;  
     
 }
 
