--- a/style.css
+++ b/style.css
@@ -3,18 +3,20 @@
 
     }
 
-    
+
     body {
+        
         background-image: url('https://images.unsplash.com/photo-1578991624414-276ef23a534f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2085&q=80');
         background-position: center center;
         background-repeat: no-repeat;
         background-attachment: fixed; 
         background-size: cover;
-        background-color:white;
+        background-color:black;
         max-width: 100%;
         height: 100%;
-        text-align: center;
+        text-align: center;  
     }
+
     
     header {
         text-align: center;
@@ -27,12 +29,14 @@
         font-family: 'Kanit', sans-serif;
         font-weight: 400;
         border: 2px solid whitesmoke;
+        opacity: 1;
     }
     
     .container {
         display: block;
         margin: auto;
         max-width: 900px; 
+        opacity: 1;
     }
     
     
@@ -239,6 +243,7 @@
         resize: none;
         border-radius: 5px;
         border-style: none;
+        
     }
     
     
